--- a/less/sample.less
+++ b/less/sample.less
@@ -8,14 +8,16 @@ html, body {
 .sponsors {
   width: 100%;
   height: 100%;
-
+  transform-style: preserve-3d;
+  perspective: 1000px;
   > .silver {
+    .debug();
     position: relative;
     width: 90%;
     height: 90%;
     left: 5%;
     top: 5%;
-
+    animation: rotate3d linear 10s infinite;
     figure {
       width: 100%;
       height: 100%;
@@ -27,7 +29,7 @@ html, body {
 
       left: 0;
       top: 0;
-      .debug();
+
       transform-origin: 0% 0%;
 
       > img {
@@ -102,6 +104,22 @@ html, body {
 
 
 .debug() {
-  //outline: 1px solid black;
+  outline: 1px solid black;
 }
 
+
+
+@keyframes rotate3d {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  50% {
+    transform: rotateX(180deg);
+  }
+
+  100% {
+    transform: rotateX(360deg);
+  }
+  
+}
